--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "shortid": "^2.2.14"
   },
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -33,6 +35,8 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-react-app": "^4.0.1"
-  }
+    "eslint-config-react-app": "^4.0.1",
+    "gh-pages": "^2.0.1"
+  },
+  "homepage": "https://sylencia.github.io/qantas-test"
 }
